infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: turkmenbey/order-best
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  selector:
    app: order
  ports:
  - name: order
    protocol: TCP
    port: 5003
    targetPort: 5003
