infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl
spec:
  selector:
    matchLabels:
      app: ticket
  template:
    metadata:
      labels:
        app: ticket
    spec:
      containers:
      - name: ticket
        image: turkmenbey/ticket-best
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv
spec:
  selector:
    app: ticket
  ports:
  - name: ticket
    protocol: TCP
    port: 5002
    targetPort: 5002
