infra/k8s/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: bestgoalkeeper.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port: 
                  number: 5001
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              service:
                name: ticket-srv
                port: 
                  number: 5002
          - path: /api/orders/?(.*)
            pathType: Prefix
            backend:
              service:
                name: order-srv
                port: 
                  number: 5003
          - path: /api/payments/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payments-srv
                port: 
                  number: 5004
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port: 
                  number: 3000
